Adds a little back.

--- a/resume.tex
+++ b/resume.tex
@@ -165,11 +165,11 @@ Seeking roles bridging platform engineering and scientific computing.
       {Senior Platform Engineer}{Oct. 2020 – Present}
       {Agile Six Applications, Inc (contract to U.S. Department of Veterans Affairs)}{Remote}
       \resumeItemListStart
-        \resumeItem{Migrated VA.gov Check-In infrastructure between AWS accounts; converted CloudFormation to Terraform}
+        \resumeItem{Migrated VA.gov Check-In infrastructure between AWS accounts; converted CloudFormation to Terraform with automated module testing}
         \resumeItem{Led VA.gov CMS team through two major Drupal upgrades (8 → 9 → 10) with zero unplanned downtime}
         \resumeItem{Parallelized test suite, reducing CI time by 60\%; built system tests spanning multiple products and upstream integrations}
         \resumeItem{Architected content release pipeline serving VA.gov's 300K+ pages to millions of veterans}
-        \resumeItem{Managed ATO compliance for PHI/PII-handling systems}
+        \resumeItem{Managed ATO compliance for PHI/PII-handling systems; hired senior engineers and QA architect}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -180,6 +180,7 @@ Seeking roles bridging platform engineering and scientific computing.
         \resumeItem{Architected infrastructure and backend services for FutureFlight.aero and Business Jet Traveler}
         \resumeItem{Built Lambda-based subscriber services and data pipelines for ad sales and circulation}
         \resumeItem{Established CI/CD pipelines and containerized development environments across all products}
+        \resumeItem{Mentored junior engineers on engineering best practices and professional development}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -188,6 +189,7 @@ Seeking roles bridging platform engineering and scientific computing.
       \resumeItemListStart
         \resumeItem{Developed multi-leader sync system for flagship macOS/iOS apps with millions of users}
         \resumeItem{Introduced CI/CD pipelines and Agile practices to the development team}
+        \resumeItem{Collaborated with a distributed international team across multiple time zones}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
