Improve description of Whispers project.

--- a/resume.tex
+++ b/resume.tex
@@ -212,7 +212,7 @@ Seeking roles bridging platform engineering and scientific computing.
   \resumeSubHeadingListStart
     \resumeListicleStart
       \resumeSideProjectListicleItem{https://github.com/goldentooth/}{🦷 Goldentooth}{Multi-node Kubernetes cluster with Slurm job scheduling, GPU compute, and JupyterLab; full observability stack and GitOps deployment}{Talos, Kubernetes, Flux CD, Slurm} \\
-      \resumeSideProjectListicleItem{https://github.com/ndouglas/whispers/}{🗣️ Whispers}{Distributed agent mesh with decentralized consensus for emergent problem-solving}{Rust} \\
+      \resumeSideProjectListicleItem{https://github.com/ndouglas/whispers/}{🗣️ Whispers}{Gossip-based mesh network with fraud-resistant distributed optimization via audited CRDTs}{Rust} \\
       \resumeSideProjectListicleItem{https://github.com/bitterbridge/blackpool/}{💻 Blackpool}{Bytecode compiler and virtual machine for the Lox language}{Rust} \\
       \resumeSideProjectListicleItem{https://github.com/ndouglas/greenstone/}{🎮 Greenstone}{Cycle-accurate NES emulator with precise timing and hardware modeling}{Rust} \\
       \resumeSideProjectListicleItem{https://github.com/ndouglas/sunhouse/}{🌈 Sunhouse}{Physically-based ray tracer implementing path tracing and Monte Carlo sampling}{Rust} \\
