Drop Sunhouse, add Distillation.

--- a/resume.tex
+++ b/resume.tex
@@ -215,7 +215,7 @@ Seeking roles bridging platform engineering and scientific computing.
       \resumeSideProjectListicleItem{https://github.com/ndouglas/whispers/}{🗣️ Whispers}{Gossip-based mesh network with fraud-resistant distributed optimization via audited CRDTs}{Rust} \\
       \resumeSideProjectListicleItem{https://github.com/bitterbridge/blackpool/}{💻 Blackpool}{Stack-based bytecode VM with mark-and-sweep GC, closures, and inheritance}{Rust} \\
       \resumeSideProjectListicleItem{https://github.com/ndouglas/greenstone/}{🎮 Greenstone}{Cycle-accurate NES emulator with precise timing and hardware modeling}{Rust} \\
-      \resumeSideProjectListicleItem{https://github.com/ndouglas/sunhouse/}{🌈 Sunhouse}{Physically-based ray tracer implementing path tracing and Monte Carlo sampling}{Rust} \\
+      \resumeSideProjectListicleItem{https://github.com/ndouglas/distillation/}{🧪 Distillation}{Knowledge distillation with Jacobian/Hessian regularization and adversarial training}{Python, PyTorch} \\
       \resumeSideProjectListicleItem{https://github.com/ndouglas/clork/}{📜 Clork}{Port of Zork I from the original mainframe MDL to modern Clojure}{Clojure} \\
     \resumeListicleEnd
   \resumeSubHeadingListEnd
