--- a/resume.tex
+++ b/resume.tex
@@ -212,10 +212,10 @@ Seeking roles bridging platform engineering and scientific computing.
   \resumeSubHeadingListStart
     \resumeListicleStart
       \resumeSideProjectListicleItem{https://github.com/goldentooth/}{🦷 Goldentooth}{Multi-node Kubernetes cluster with Slurm job scheduling, GPU compute, and JupyterLab; full observability stack and GitOps deployment}{Talos, Kubernetes, Flux CD, Slurm} \\
-      \resumeSideProjectListicleItem{https://github.com/ndouglas/whispers/}{🗣️ Whispers}{Gossip-based mesh network with fraud-resistant distributed optimization via audited CRDTs}{Rust} \\
+      \resumeSideProjectListicleItem{https://github.com/bitterbridge/whispers/}{🗣️ Whispers}{Gossip-based mesh network with fraud-resistant distributed optimization via audited CRDTs}{Rust} \\
       \resumeSideProjectListicleItem{https://github.com/bitterbridge/blackpool/}{💻 Blackpool}{Stack-based bytecode VM with mark-and-sweep GC, closures, and inheritance}{Rust} \\
       \resumeSideProjectListicleItem{https://github.com/ndouglas/greenstone/}{🎮 Greenstone}{Cycle-accurate NES emulator with precise timing and hardware modeling}{Rust} \\
-      \resumeSideProjectListicleItem{https://github.com/ndouglas/distillation/}{🧪 Distillation}{Knowledge distillation with Jacobian/Hessian regularization and adversarial training}{Python, PyTorch} \\
+      \resumeSideProjectListicleItem{https://github.com/bitterbridge/distillation/}{🧪 Distillation}{Knowledge distillation with Jacobian/Hessian regularization and adversarial training}{Python, PyTorch} \\
       \resumeSideProjectListicleItem{https://github.com/ndouglas/clork/}{📜 Clork}{Port of Zork I from the original mainframe MDL to modern Clojure}{Clojure} \\
     \resumeListicleEnd
   \resumeSubHeadingListEnd
