--- a/resume.tex
+++ b/resume.tex
@@ -217,7 +217,7 @@ Seeking roles bridging platform engineering and scientific computing.
       \resumeSideProjectListicleItem{https://github.com/bitterbridge/distillation/}{🧪 Distillation}{Knowledge distillation with Jacobian/Hessian regularization and adversarial training}{Python, PyTorch} \\
       \resumeSideProjectListicleItem{https://github.com/bitterbridge/blackpool/}{💻 Blackpool}{Stack-based bytecode VM with mark-and-sweep GC, closures, and inheritance}{Rust} \\
       \resumeSideProjectListicleItem{https://github.com/ndouglas/greenstone/}{🎮 Greenstone}{Cycle-accurate NES emulator with precise timing and hardware modeling}{Rust} \\
-      \resumeSideProjectListicleItem{https://github.com/ndouglas/clork/}{📜 Clork}{Port of Zork I from the original mainframe MDL to modern Clojure}{Clojure} \\
+      \resumeSideProjectListicleItem{https://github.com/ndouglas/clork/}{📜 Clork}{Zork I port with NL Parser, backward-chaining GOAP planner, and OpenAI Gym-style RL training API}{Clojure} \\
     \resumeListicleEnd
   \resumeSubHeadingListEnd
 
