--- a/resume.tex
+++ b/resume.tex
@@ -152,7 +152,7 @@
 \end{center}
 
 \begin{center}
-Platform engineer with 12+ years building infrastructure for distributed systems.
+Platform engineer with 14+ years building infrastructure for distributed systems.
 Currently focused on ML/HPC infrastructure: Kubernetes, Slurm, GPU workloads.
 Seeking roles bridging platform engineering and scientific computing.
 \end{center}
@@ -216,6 +216,7 @@ Seeking roles bridging platform engineering and scientific computing.
       \resumeSideProjectListicleItem{https://github.com/bitterbridge/whispers/}{🗣️ Whispers}{Gossip-based mesh network with fraud-resistant distributed optimization via audited CRDTs}{Rust} \\
       \resumeSideProjectListicleItem{https://github.com/bitterbridge/distillation/}{🧪 Distillation}{Knowledge distillation with Jacobian/Hessian regularization and adversarial training}{Python, PyTorch} \\
       \resumeSideProjectListicleItem{https://github.com/bitterbridge/blackpool/}{💻 Blackpool}{Stack-based bytecode VM with mark-and-sweep GC, closures, and inheritance}{Rust} \\
+      \resumeSideProjectListicleItem{https://github.com/ndouglas/longtable/}{🎲 Longtable}{Rule-based simulation engine with LISP DSL, immutable world state, and time-travel debugging}{Rust} \\
       \resumeSideProjectListicleItem{https://github.com/ndouglas/greenstone/}{🎮 Greenstone}{Cycle-accurate NES emulator with precise timing and hardware modeling}{Rust} \\
       \resumeSideProjectListicleItem{https://github.com/ndouglas/clork/}{📜 Clork}{Zork I port with NL Parser, backward-chaining GOAP planner, and OpenAI Gym-style RL training API}{Clojure} \\
     \resumeListicleEnd
