--- a/resume.tex
+++ b/resume.tex
@@ -212,7 +212,7 @@ Seeking roles bridging platform engineering and scientific computing.
   \resumeSubHeadingListStart
     \resumeListicleStart
       \resumeSideProjectListicleItem{https://github.com/goldentooth/}{🦷 Goldentooth}{Multi-node Kubernetes cluster with Slurm job scheduling, GPU compute, and JupyterLab; full observability stack and GitOps deployment}{Talos, Kubernetes, Flux CD, Slurm} \\
-      \resumeSideProjectListicleItem{https://stg.bit-wit.com/}{📚 Bitwit}{Spaced repetition platform for CS education with time-based grading and parameterized card generation (Beta)}{TypeScript, AWS Lambda, DynamoDB} \\
+      \resumeSideProjectListicleItem{https://bit-wit.com/}{📚 Bitwit}{Spaced repetition platform for CS education with time-based grading and parameterized card generation}{TypeScript, AWS Lambda, DynamoDB} \\
       \resumeSideProjectListicleItem{https://github.com/bitterbridge/whispers/}{🗣️ Whispers}{Gossip-based mesh network with fraud-resistant distributed optimization via audited CRDTs}{Rust} \\
       \resumeSideProjectListicleItem{https://github.com/bitterbridge/distillation/}{🧪 Distillation}{Knowledge distillation with Jacobian/Hessian regularization and adversarial training}{Python, PyTorch} \\
       \resumeSideProjectListicleItem{https://github.com/bitterbridge/blackpool/}{💻 Blackpool}{Stack-based bytecode VM with mark-and-sweep GC, closures, and inheritance}{Rust} \\
