--- a/resume.tex
+++ b/resume.tex
@@ -213,9 +213,9 @@ Seeking roles bridging platform engineering and scientific computing.
     \resumeListicleStart
       \resumeSideProjectListicleItem{https://github.com/goldentooth/}{🦷 Goldentooth}{Multi-node Kubernetes cluster with Slurm job scheduling, GPU compute, and JupyterLab; full observability stack and GitOps deployment}{Talos, Kubernetes, Flux CD, Slurm} \\
       \resumeSideProjectListicleItem{https://bit-wit.com/}{📚 Bitwit}{Spaced repetition platform for CS education with time-based grading and parameterized card generation}{TypeScript, AWS Lambda, DynamoDB} \\
-      \resumeSideProjectListicleItem{https://github.com/bitterbridge/whispers/}{🗣️ Whispers}{Gossip-based mesh network with fraud-resistant distributed optimization via audited CRDTs}{Rust} \\
-      \resumeSideProjectListicleItem{https://github.com/bitterbridge/distillation/}{🧪 Distillation}{Knowledge distillation with Jacobian/Hessian regularization and adversarial training}{Python, PyTorch} \\
-      \resumeSideProjectListicleItem{https://github.com/bitterbridge/blackpool/}{💻 Blackpool}{Stack-based bytecode VM with mark-and-sweep GC, closures, and inheritance}{Rust} \\
+      \resumeSideProjectListicleItem{https://github.com/ndouglas/whispers/}{🗣️ Whispers}{Gossip-based mesh network with fraud-resistant distributed optimization via audited CRDTs}{Rust} \\
+      \resumeSideProjectListicleItem{https://github.com/ndouglas/distillation/}{🧪 Distillation}{Knowledge distillation with Jacobian/Hessian regularization and adversarial training}{Python, PyTorch} \\
+      \resumeSideProjectListicleItem{https://github.com/ndouglas/blackpool/}{💻 Blackpool}{Stack-based bytecode VM with mark-and-sweep GC, closures, and inheritance}{Rust} \\
       \resumeSideProjectListicleItem{https://github.com/ndouglas/longtable/}{🎲 Longtable}{Rule-based simulation engine with LISP DSL, immutable world state, and time-travel debugging}{Rust} \\
       \resumeSideProjectListicleItem{https://github.com/ndouglas/greenstone/}{🎮 Greenstone}{Cycle-accurate NES emulator with precise timing and hardware modeling}{Rust} \\
       \resumeSideProjectListicleItem{https://github.com/ndouglas/clork/}{📜 Clork}{Zork I port with NL Parser, backward-chaining GOAP planner, and OpenAI Gym-style RL training API}{Clojure} \\
