Update Clork description.

--- a/resume.tex
+++ b/resume.tex
@@ -218,7 +218,7 @@ Seeking roles bridging platform engineering and scientific computing.
       \resumeSideProjectListicleItem{https://github.com/ndouglas/blackpool/}{💻 Blackpool}{Stack-based bytecode VM with mark-and-sweep GC, closures, and inheritance}{Rust} \\
       \resumeSideProjectListicleItem{https://github.com/ndouglas/longtable/}{🎲 Longtable}{Rule-based simulation engine with LISP DSL, immutable world state, and time-travel debugging}{Rust} \\
       \resumeSideProjectListicleItem{https://github.com/ndouglas/greenstone/}{🎮 Greenstone}{Cycle-accurate NES emulator with precise timing and hardware modeling}{Rust} \\
-      \resumeSideProjectListicleItem{https://github.com/ndouglas/clork/}{📜 Clork}{Zork I port with NL Parser, backward-chaining GOAP planner, and OpenAI Gym-style RL training API}{Clojure} \\
+      \resumeSideProjectListicleItem{https://github.com/ndouglas/clork/}{📜 Clork}{Zork I port with an OpenAI Gym-style RL training API}{Clojure} \\
     \resumeListicleEnd
   \resumeSubHeadingListEnd
 
